--- a/index.css
+++ b/index.css
@@ -102,11 +102,55 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 header .logo {
     width: 100px;
     height: 18px;
+}
+
+.hidden {
+    display: none;
+}
+
+.mobile-nav {
+    position: absolute;
+    background-color: var(--dark-violet);
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    padding-top: 3rem;
+    background-image: url(/images/bg-pattern-mobile-nav.svg);
+    background-position: right bottom;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.mobile-nav ul {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.mobile-nav ul li a {
+    color: var(--very-light-gray);
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+}
+
+.mobile-nav button {
+    background-color: transparent;
+    border: 2px solid var(--very-light-gray);
+    color: var(--very-light-gray);
+    padding: 0.8rem 0;
+    width: 90%;
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: 400;
+    transition: background-color 0.3s ease-in-out;
 }
 
 section.intro .intro-text {
