--- a/index.css
+++ b/index.css
@@ -50,6 +50,10 @@ select {
     font: inherit;
 }
 
+button {
+    cursor: pointer;    
+}
+
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
     html:focus-within {
@@ -97,6 +101,11 @@ h4 {
     font-family: "DM Serif Display", serif;
 }
 
+/***********/
+/* Header  */
+/***********/
+
+
 header {
     padding: 1.4rem 1rem;
     display: flex;
@@ -111,6 +120,10 @@ header .logo {
 }
 
 .hidden {
+    display: none;
+}
+
+header nav.desktop {
     display: none;
 }
 
@@ -153,13 +166,32 @@ header .logo {
     transition: background-color 0.3s ease-in-out;
 }
 
+/****************/
+/* Main content */
+/****************/
+
+
+section.intro {
+    position: relative;
+}
+
+section.intro .shape {
+    position: absolute;
+    height: 300px;
+    width: 100%;
+    background-image: url(/images/bg-pattern-intro-right-mobile.svg);
+    background-repeat: no-repeat;
+    background-position: right;
+    bottom: -20%;
+}
+
 section.intro .intro-text {
     background-color: var(--dark-violet);
     color: var(--very-light-gray);
     padding: 4rem 1rem;
-    background-image: url(/images/bg-pattern-intro-left-mobile.svg), url(/images/bg-pattern-intro-right-mobile.svg);
+    background-image: url(/images/bg-pattern-intro-left-mobile.svg);
     background-repeat: no-repeat;
-    background-position: left top, right bottom;
+    background-position: left top;
 }
 
 section.intro .intro-text h1 {
@@ -182,6 +214,10 @@ section.intro .intro-text button {
     text-transform: uppercase;
     font-weight: 400;
     transition: background-color 0.3s ease-in-out;
+}
+
+.shape-left {
+    display: none;
 }
 
 section.different {
@@ -330,4 +366,155 @@ footer .logo-social::after {
     font-weight: 700;
     font-size: .85rem;
     text-decoration: none;
+}
+
+
+/***********/
+/* Desktop */
+/***********/
+
+@media screen and (min-width:768px){
+
+    header {
+        max-width: 80%;
+        margin: 0 auto;
+    }
+
+    header .hamburger {
+        display: none;
+    }
+
+    header nav.desktop {
+        display: flex;
+    }
+
+    header nav.desktop ul {
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+    }
+
+    header nav.desktop ul li a {
+        color: var(--dark-grayish-violet);
+        text-decoration: none;
+    }
+
+    header nav.desktop button {
+        background-color: transparent;
+        border: 2px solid var(--very-dark-violet);
+        color: var(--very-dark-violet);
+        padding: 0.5rem 0;
+        width: 10rem;
+        font-size: 1rem;
+        text-transform: uppercase;
+        font-weight: 400;
+        transition: background-color 0.3s ease-in-out;
+        cursor: pointer;
+    }
+
+    section.intro .hero-container {
+        position: absolute;
+        right: 8%;
+        top: 20%;
+    }
+
+    section.intro .shape {
+        bottom: unset;
+        z-index: 999;
+        background-image: url(/images/bg-pattern-intro-right-desktop.svg);
+        background-size: 25rem;
+        height: 536px;
+        background-size: 25rem 33rem;
+    }
+
+    section.intro .intro-text {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 9rem 10rem;
+        text-align: left;
+    }
+
+    section.intro .intro-text .main-text {
+        padding-right: 5rem;
+    }
+
+    section.intro .intro-text .main-text h1 {
+        font-size: 4rem;
+    }
+
+    section.intro .intro-text {
+        background-image: unset;
+    }
+
+    section.intro .intro-text .main-text::before {
+        content: "";
+        height: 2px;
+        width: 40%;
+        display: inherit;
+        background-color: var(--dark-grayish-violet);
+        margin-bottom: 5rem;
+    }
+
+    .shape-left {
+        display: block;
+        width: 14%;
+        height: 536px;
+        background-image: url(/images/bg-pattern-intro-left-desktop.svg);
+        background-repeat: no-repeat;
+        position: absolute;
+        bottom: -50%;
+    }
+
+    section.different {
+        text-align: left;
+        /* max-width: 80%;
+        margin: 0 auto; */
+    }
+
+    section.different h1,
+    section.different .different-cards {
+        max-width: 80%;
+        margin: 0 auto;
+    }
+
+    section.different h1 {
+        font-size: 3rem;
+        margin-bottom: 5rem;
+    }
+
+    section.different h1::before {
+        margin: 0 0 2rem 0;
+        width: 10%;
+    }
+
+    section.different .different-cards {
+        flex-direction: row;
+        gap: 2rem;
+    }
+
+    section.different .different-cards .different-card {
+        align-items: flex-start;
+    }
+
+    section.different .different-cards .different-card p {
+        text-align: left;
+        padding-right: 2rem;
+    }
+
+    section.find-out {
+        max-width: 80%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 2rem 4rem;
+        background-image: url(/images/bg-pattern-how-we-work-desktop.svg);
+    }
+
+    section.find-out h1 {
+        margin-bottom: 0;
+        max-width: 26rem;
+        text-align: left;
+        font-size: 2.9rem;
+    }
 }
